Logtalk/examples/errors/invargdir.lgt

:- object(invargdir).

	% invalid directive argument
	:- public(1234).

:- end_object.
